# cltest

./: .gitignore  DEVELOPER_GUIDE.md  README.md  REQUIREMENTS.md  TESTING.md  design.md  main.py  pantone_rgb_converter.py  progressive-student-profile.html  pyproject.toml  student-profile-prototype.html
api/: tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  validation.py  wsgi.py
core/: admin.py  apps.py  factories.py  matching.py  models.py  tests.py  urls.py  views.py
core/management/commands/: populate_demo_data.py
core/migrations/: 0001_initial.py  0002_alter_user_user_type.py  0003_employerprofile_rejection_reason.py  0004_studentprofile_external_links.py  0005_studentprofile_documents_and_more.py
doc/: application_summary.md
mock_api/: urls.py  views.py
student_platform/: asgi.py  settings.py  urls.py  wsgi.py
templates/: admin_dashboard.html  auth_choice.html  base.html  browse_projects.html  create_project.html  employer_dashboard.html  employer_pending.html  employer_registration.html  home.html  login.html  project_matches.html  register_choice.html  student_account_creation.html  student_dashboard.html  student_profile_edit.html  student_registration.html
utils/: __init__.py
web/: urls.py  views.py
web/templates/: admin_dashboard.html  auth_choice.html  base.html  browse_projects.html  create_project.html  employer_dashboard.html  employer_pending.html  employer_registration.html  home.html  login.html  project_matches.html  register_choice.html  student_account_creation.html  student_dashboard.html  student_profile_edit.html  student_registration.html
